разметка главной страницы

--- a/index.html
+++ b/index.html
@@ -1,12 +1,112 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
+    <head>
+      <meta charset="utf-8">
+        <title>SEDONA</title>
+    </head>
   <body>
+    <header class="header-main">
+    <nav class="navigation-main">
+        <img src="#" alt="логотип седона" width="150" height="100"/>
+        <ul class="navigation-list">
+          <li class="navigation-item"><a href="#">Информация</a></li>
+          <li class="navigation-item"><a href="#">Фото и видео</a></li>
+          <li class="navigation-item"><a href="#">Карта штата</a></li>
+          <li class="navigation-item"><a href="#">Гостиницы</a></li>
+        </ul>
+    </nav>
+    </header>
+    <main class="container">
+      <div class="logo">
+        </div>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
+          <h1 class="main-title">седона-небольшой городок в аризоне, заслуживающий большего!</h1>
+          <p class="features-description">РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА КРУЧЕ, ЧЕМ ГРАНД КАНЬОН</p>
 
+      <section class="features">
+        <div class="features-contents">
+          <h2 class="features-title">настоящий городок</h2>
+          <span class="number">№1</span>
+          <p class="features-description">седона-не атракцион для туристов, там течет своя жизнь </p>
+        </div>
+        <div class="features-img">
+          <a class="features-img">
+            <img src="#" alt="Седона город" width="500" height="200" />
+          </a>
+        </div>
+      </section>
+
+      <section class="services">
+        <div class="features-services">
+          <h2 class="features-title">Жилье</h2>
+          <p class="features-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+        </div>
+        <div class="features-services">
+          <h2 class="features-title">Еда</h2>
+          <p class="features-description">Всегда заказывайте фирменныйе бургер, вы не разочаруетесь!</p>
+        </div>
+        <div class="features-services">
+          <h2 class="features-title">Сувениры</h2>
+          <p class="features-description">Всегда заказывайте фирменныйе бургер, вы не разочаруетесь!</p>
+        </div>
+      </section>
+
+      <section class="features">
+        <div class="features-img">
+          <a class="features-img">
+            <img src="#" alt="Седона город" width="500" height="200" />
+          </a>
+        </div>
+        <div class="features-contents">
+          <h2 class="features-title">Там есть мост дьявола</h2>
+          <span class="number">№7</span>
+          <p class="features-description">да, по нему можно пройти! если конечно вы осмелитесь</p>
+        </div>
+      </section>
+
+      <section class="services">
+        <div class="features-services">
+          <h2 class="features-title">Небольшая площадь</h2>
+          <span class="number">№3</span>
+          <p class="features-description">Все достопримечательности находятся очень близко</p>
+        </div>
+        <div class="features-services">
+          <h2 class="features-title">Красивая дорога</h2>
+          <span class="number">№4</span>
+          <p class="features-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </div>
+        <div class="features-services">
+          <h2 class="features-title">Мало туристов</h2>
+          <span class="number">№5</span>
+          <p class="features-description">Большенство едет в гранд каньон и толпится там</p>
+        </div>
+      </section>
+
+      <div class="interested">
+        <h2 class="interested">Заинтересовались?</h2>
+        <p class="features-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <a class="button" href="#">Найти гостиницу</a>
+        <!-- здесь будет форма -->
+      </div>
+
+      <section class="modal-map">
+        <h3 class="visually-hidden">карта</h3>
+       <img src="#" alt="карта" width="1000" height="500" />
+      </section>
+
+      <footer class="main-footer">
+        <div class="footer-social">
+          <ul>
+            <li><a class="social-button" href="#">твиттер</a></li>
+            <li><a class="social-button" href="#">Фейсбук</a></li>
+            <li><a class="social-button" href="#">ютуб</a></li>
+          </ul>
+        </div>
+        <p class="footer-copyright">
+          <a class="copyright" href="https://htmlacademy.ru">website by</a>
+          <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+        </p>
+      </footer>
+    </main>
   </body>
 </html>
