Главная страница правки названий классов

--- a/index.html
+++ b/index.html
@@ -19,77 +19,73 @@
     <main class="container">
       <div class="logo">
         </div>
-
-          <h1 class="main-title">седона-небольшой городок в аризоне, заслуживающий большего!</h1>
-          <p class="features-description">РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА КРУЧЕ, ЧЕМ ГРАНД КАНЬОН</p>
-
-      <section class="features">
-        <div class="features-contents">
-          <h2 class="features-title">настоящий городок</h2>
-          <span class="number">№1</span>
-          <p class="features-description">седона-не атракцион для туристов, там течет своя жизнь </p>
-        </div>
-        <div class="features-img">
-            <img src="#" alt="Седона город" width="500" height="200" />
-        </div>
-      </section>
-
-      <section class="services">
-        <div class="features-services">
-          <h2 class="features-title">Жилье</h2>
-          <p class="features-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-        </div>
-        <div class="features-services">
-          <h2 class="features-title">Еда</h2>
-          <p class="features-description">Всегда заказывайте фирменныйе бургер, вы не разочаруетесь!</p>
-        </div>
-        <div class="features-services">
-          <h2 class="features-title">Сувениры</h2>
-          <p class="features-description">Всегда заказывайте фирменныйе бургер, вы не разочаруетесь!</p>
-        </div>
-      </section>
-
-      <section class="features">
-        <div class="features-img">
-            <img src="#" alt="Седона город" width="500" height="200" />
-        </div>
-        <div class="features-contents">
-          <h2 class="features-title">Там есть мост дьявола</h2>
-          <span class="number">№7</span>
-          <p class="features-description">да, по нему можно пройти! если конечно вы осмелитесь</p>
-        </div>
-      </section>
-
-      <section class="services">
-        <div class="features-services">
-          <h2 class="features-title">Небольшая площадь</h2>
-          <span class="number">№3</span>
-          <p class="features-description">Все достопримечательности находятся очень близко</p>
-        </div>
-        <div class="features-services">
-          <h2 class="features-title">Красивая дорога</h2>
-          <span class="number">№4</span>
-          <p class="features-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-        </div>
-        <div class="features-services">
-          <h2 class="features-title">Мало туристов</h2>
-          <span class="number">№5</span>
-          <p class="features-description">Большенство едет в гранд каньон и толпится там</p>
-        </div>
-      </section>
-
-      <div class="interested">
-        <h2 class="interested">Заинтересовались?</h2>
-        <p class="features-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-        <a class="button" href="#">Найти гостиницу</a>
-        <!-- здесь будет форма -->
+      <div class="main-title">
+          <h1 class="h1">седона-небольшой городок в аризоне, заслуживающий большего!</h1>
+          <p class="paragraph">РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА КРУЧЕ, ЧЕМ ГРАНД КАНЬОН</p>
       </div>
-
-      <section class="modal-map">
-        <h3 class="visually-hidden">карта</h3>
-       <img src="#" alt="карта" width="1000" height="500" />
+      <section class="features">
+        <div class="features-contents">
+          <h2 class="subtitle">настоящий городок</h2>
+          <span class="features-number">№1</span>
+          <p class="paragraph">седона-не атракцион для туристов, там течет своя жизнь </p>
+        </div>
+        <div class="features-img">
+            <img src="#" alt="Седона город" width="500" height="200">
+        </div>
       </section>
+      <section class="services">
+        <div class="features-services">
+          <h2 class="subtitle">Жилье</h2>
+          <p class="paragraph">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+        </div>
+        <div class="features-services">
+          <h2 class="subtitle">Еда</h2>
+          <p class="paragraph">Всегда заказывайте фирменныйе бургер, вы не разочаруетесь!</p>
+        </div>
+        <div class="features-services">
+          <h2 class="subtitle">Сувениры</h2>
+          <p class="paragraph">Всегда заказывайте фирменныйе бургер, вы не разочаруетесь!</p>
+        </div>
+      </section>
+      <section class="features">
+        <div class="features-img">
+            <img src="#" alt="Седона город" width="500" height="200" />
+        </div>
+        <div class="features-contents">
+          <h2 class="subtitle">Там есть мост дьявола</h2>
+          <span class="number">№7</span>
+          <p class="paragraph">да, по нему можно пройти! если конечно вы осмелитесь</p>
+        </div>
+      </section>
+      <section class="services">
+        <div class="features-services">
+          <h2 class="subtitle">Небольшая площадь</h2>
+          <span class="number">№3</span>
+          <p class="paragraph">Все достопримечательности находятся очень близко</p>
+        </div>
+        <div class="features-services">
+          <h2 class="subtitle">Красивая дорога</h2>
+          <span class="number">№4</span>
+          <p class="paragraph">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </div>
+        <div class="features-services">
+          <h2 class="subtitle">Мало туристов</h2>
+          <span class="number">№5</span>
+          <p class="paragraph">Большенство едет в гранд каньон и толпится там</p>
+        </div>
+      </section>
+      <div class="interested">
+        <h2 class="interested-title">Заинтересовались?</h2>
+        <p class="paragraph">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <button class="button" href="#">Поиск гостиницы в седоне</button>
+        <form class="interested-form" action="#" method="post">
 
+        </form>
+      </div>
+      <section class="map">
+        <h3 class="visually-hidden">карта</h3>
+        <img src="#" alt="карта" width="1000" height="500" />
+      </section>
       <footer class="main-footer">
         <div class="footer-social">
           <ul>
